--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,25 @@
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
+@use "app/variables" as variables;
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$kiko-primary: mat.define-palette(mat.$indigo-palette);
-$kiko-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$kiko-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$kiko-theme: mat.define-light-theme((
-  color: (
-    primary: $kiko-primary,
-    accent: $kiko-accent,
-    warn: $kiko-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($kiko-theme);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #fafafa;
+}
+
+.card {
+  @apply shadow-md rounded-md p-4 m-4 flex-1 cursor-pointer justify-center md:flex md:items-center bg-white;
+
+  h3 {
+    @apply text-center;
+    margin: 0 !important;
+  }
+}
