fix logo's path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1 class="flex justify-between pt-3 px-3 pb-4 items-center bg-white">
-    <img src="/assets/logo-bpi-b2c.jpg" alt="logo bpi france" class="logo-bpi">
+    <img src="./assets/logo-bpi-b2c.jpg" alt="logo bpi france" class="logo-bpi">
     <div>
       <!-- <h3 class="flex items-center text-center" *ngIf="titleService.title$ | async as title">
         <mat-icon>{{title.icon}}</mat-icon>
