--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto max-w-3xl">
     <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
         <dt class="truncate text-sm font-medium text-gray-500">Object de réduction carbone</dt>
-        <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 text-center">84 tCO<sub>2</sub></dd>
+        <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 text-center"><span [countUp]="value" [duration]="duration"></span> tCO<sub>2</sub></dd>
     </div>
 </div>
 
