--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -1,1 +1,33 @@
-<p>home-bpi works!</p>
+<div class="w-5/6 mx-auto">
+  <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dt class="truncate text-sm font-medium text-gray-500">Émis</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
+        <span [countUp]="CO2" [duration]="duration"></span>
+        <span class="text-xl font-semibold text-gray-900">tCO₂e</span>
+      </dd>
+    </div>
+
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dt class="truncate text-sm font-medium text-gray-500">Réduction des émissions</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
+        <span [countUp]="reducedCO2" [duration]="duration"></span>
+        <span class="text-xl font-semibold text-gray-900">tCO₂e</span>
+      </dd>
+    </div>
+
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dt class="truncate text-sm font-medium text-gray-500">Green loan</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
+        <span [countUp]="countGreenloans" [duration]="duration"></span>
+      </dd>
+    </div>
+  </dl>
+</div>
+
+<!-- <button (click)="clearSelection()">Clear Selection</button> -->
+<div class="w-4/5 h-[68vh] mx-auto mt-12">
+  <ag-grid-angular style="width: 100%; height: 100%" class="ag-theme-alpine" [columnDefs]="columnDefs"
+    [defaultColDef]="defaultColDef" [rowData]="rowData$ | async" [rowSelection]="'multiple'" [animateRows]="true"
+    (gridReady)="onGridReady($event)" (cellClicked)="onCellClicked($event)"></ag-grid-angular>
+</div>
