--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,9 @@
 @use "./variables" as variables;
 
-h1 {
-    max-height: variables.$navbar_height;
-
-    &.isBPI {
-        background: #FFCD00;
-    }
+nav.bpi {
+  background: #ffcd00 !important;
 }
 
 .logo-bpi {
-    max-height: calc(variables.$navbar_height - 14px);
+  max-height: calc(variables.$navbar_height - 14px);
 }
