--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -27,7 +27,7 @@
 
 <!-- <button (click)="clearSelection()">Clear Selection</button> -->
 <div class="w-4/5 h-[68vh] mx-auto mt-12">
-  <ag-grid-angular style="width: 100%; height: 100%" class="ag-theme-alpine" [columnDefs]="columnDefs"
+  <ag-grid-angular style="width: 100%; height: 100%" class="ag-theme-material" [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef" [rowData]="rowData$ | async" [rowSelection]="'multiple'" [animateRows]="true"
     (gridReady)="onGridReady($event)" (cellClicked)="onCellClicked($event)"></ag-grid-angular>
 </div>
