--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,11 @@
                         <div class="relative ml-3">
                             <div>
                                 <button type="button"
-                                    class="flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+                                    class="flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 ring-1 ring-slate-400"
                                     id="user-menu-button" aria-expanded="false" aria-haspopup="true"
                                     (click)="navigateToBpi()">
                                     <span class="sr-only">Open user menu</span>
-                                    <img class="h-10 w-10 rounded-full" [src]="user.picture" alt="">
+                                    <img class="h-10 w-10 rounded-full" [src]="user.picture[persona]" alt="">
                                 </button>
                             </div>
                         </div>
