ui improvements for homepage

--- a/src/app/cdk/carbon-metric/carbon-metric.component.html
+++ b/src/app/cdk/carbon-metric/carbon-metric.component.html
@@ -11,7 +11,15 @@
                 <span aria-hidden="true" *ngIf="route"> &rarr;</span>
             </a>
         </h3>
-        <p class="mt-1 text-sm text-gray-500">{{description}}
-        </p>
+        <ng-container *ngIf="route">
+            <p class="mt-1 text-sm text-gray-500">{{description}}
+            </p>
+        </ng-container>
+        <ng-container *ngIf="!route">
+            <div
+                class=" items-center my-1 font-medium py-1 px-2 rounded-full text-[#071A39] bg-[#FFE166] border border-[#FFE166] w-[114px]">
+                <div class="text-xs font-normal leading-none">Bientôt disponible</div>
+            </div>
+        </ng-container>
     </div>
 </div>
