--- a/src/app/cdk/carbon-metric/carbon-metric.component.html
+++ b/src/app/cdk/carbon-metric/carbon-metric.component.html
@@ -1,6 +1,6 @@
 <div class="relative -m-2 flex items-center space-x-4 rounded-xl p-2 focus-within:ring-2 focus-within:ring-indigo-500 "
     [ngClass]="{'hover:bg-gray-50': route}">
-    <div class="flex-shrink-0 flex items-center justify-center h-16 w-16 rounded-lg" [ngClass]="color">
+    <div class="flex-shrink-0 flex items-center justify-center h-16 w-16 rounded-lg" [ngClass]="classNames">
         <ng-content></ng-content>
     </div>
     <div>
