--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,96 +1,137 @@
 <div class="w-7/12 mx-auto">
-    <!-- <h1 class="text-4xl text-gray-900 font-bold">
-        Collection de données
-    </h1> -->
+    <h1 class="text-4xl text-gray-900 font-bold mb-12">
+        Prêt économie d'énergie (PEE)
+    </h1>
 
 
-    <div class="mx-auto max-w-4xl mt-6 mb-12">
+    <!-- <div class="mx-auto max-w-4xl mt-6 mb-12">
         <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
             <dt class="truncate text-xl font-medium text-gray-500">Objectif de réduction carbone</dt>
             <dd class="mt-1 text-4xl font-semibold tracking-tight text-gray-900 text-center"><span [countUp]="value"
                     [duration]="duration"></span> tCO<sub>2</sub></dd>
         </div>
+    </div> -->
+
+    <div class="mx-auto mt-6 mb-14">
+        <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+            <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+                <dt class="truncate text-lg font-medium text-gray-500">Taux</dt>
+                <dd class="mt-1 text-4xl font-semibold tracking-tight text-gray-900 flex items-baseline">
+                    <span>4.2</span>
+                    <span class="text-xl font-semibold text-gray-900">%</span>
+
+
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 mx-6 appear-after">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
+                    </svg>
+
+
+                    <span class="appear-after">3.9</span>
+                    <span class="text-xl font-semibold text-gray-900 appear-after">%</span>
+                </dd>
+            </div>
+
+            <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+                <dt class="truncate text-lg font-medium text-gray-500">Objectif à 12 mois</dt>
+                <dd class="mt-1 text-4xl font-semibold tracking-tight text-gray-900">
+                    <span [countUp]="currentLoan.goal" [duration]="duration"></span>
+                    <span class="text-xl font-semibold text-gray-900">% de consommation d'énergie</span>
+                </dd>
+            </div>
+
+            <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+                <dt class="truncate text-lg font-medium text-gray-500">Montant</dt>
+                <dd class="mt-1 text-4xl font-semibold tracking-tight text-gray-900">
+                    <span>500 000</span>
+                    <span class="text-xl font-semibold text-gray-900">€</span>
+                </dd>
+            </div>
+        </dl>
     </div>
 
-    <h2 class="text-lg font-medium text-gray-900">
-        Indicateurs
-    </h2>
-    <p class="mt-1 text-sm text-gray-500">Vous n'avez pas encore rentré d'informations</p>
-    <ul role="list" class="mt-6 grid grid-cols-1 gap-6 border-t border-b border-gray-200 py-6 sm:grid-cols-2">
-        <li class="flow-root">
-            <app-carbon-metric color="bg-yellow-500" title="Consommation énergétique"
-                description="Connectez votre compte Linky" route="linky">
-                <!-- Heroicon name: outline/bolt -->
-                <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
-                    <path strokeLinecap="round" strokeLinejoin="round"
-                        d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
-                </svg>
-            </app-carbon-metric>
-        </li>
+    <div class="mx-auto max-w-4xl">
+        <h2 class="text-lg font-medium text-gray-900">
+            Indicateurs
+        </h2>
+        <p class="mt-1 text-sm text-gray-500">Vous n'avez pas encore rentré d'informations</p>
+        <ul role="list" class="mt-6 grid grid-cols-1 gap-6 border-t border-b border-gray-200 py-6 sm:grid-cols-2">
+            <li class="flow-root">
+                <app-carbon-metric color="bg-yellow-500" title="Consommation énergétique"
+                    description="Connectez votre compte Linky" route="linky">
+                    <!-- Heroicon name: outline/bolt -->
+                    <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
+                        <path strokeLinecap="round" strokeLinejoin="round"
+                            d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
+                    </svg>
+                </app-carbon-metric>
+            </li>
 
-        <li class="flow-root">
-            <app-carbon-metric color="bg-blue-500" title="Transports" description="Bientôt disponible">
-                <!-- Heroicon name: outline/truck -->
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-6 text-white">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
-                </svg>
-            </app-carbon-metric>
-        </li>
+            <li class="flow-root">
+                <app-carbon-metric color="bg-blue-500" title="Transports" description="Bientôt disponible">
+                    <!-- Heroicon name: outline/truck -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
+                    </svg>
+                </app-carbon-metric>
+            </li>
 
-        <li class="flow-root">
-            <app-carbon-metric color="bg-[#D069B9]" title="Economie circulaire" description="Bientôt disponible">
-                <!-- Heroicon name: outline/arrow-path -->
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-6 text-white">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
-                </svg>
-            </app-carbon-metric>
-        </li>
+            <li class="flow-root">
+                <app-carbon-metric color="bg-[#D069B9]" title="Economie circulaire" description="Bientôt disponible">
+                    <!-- Heroicon name: outline/arrow-path -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                    </svg>
+                </app-carbon-metric>
+            </li>
 
-        <li class="flow-root">
-            <app-carbon-metric color="bg-green-500" title="Protection de l'environnement"
-                description="Bientôt disponible">
-                <!-- Heroicon name: outline/truck --><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-white">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M20.893 13.393l-1.135-1.135a2.252 2.252 0 01-.421-.585l-1.08-2.16a.414.414 0 00-.663-.107.827.827 0 01-.812.21l-1.273-.363a.89.89 0 00-.738 1.595l.587.39c.59.395.674 1.23.172 1.732l-.2.2c-.212.212-.33.498-.33.796v.41c0 .409-.11.809-.32 1.158l-1.315 2.191a2.11 2.11 0 01-1.81 1.025 1.055 1.055 0 01-1.055-1.055v-1.172c0-.92-.56-1.747-1.414-2.089l-.655-.261a2.25 2.25 0 01-1.383-2.46l.007-.042a2.25 2.25 0 01.29-.787l.09-.15a2.25 2.25 0 012.37-1.048l1.178.236a1.125 1.125 0 001.302-.795l.208-.73a1.125 1.125 0 00-.578-1.315l-.665-.332-.091.091a2.25 2.25 0 01-1.591.659h-.18c-.249 0-.487.1-.662.274a.931.931 0 01-1.458-1.137l1.411-2.353a2.25 2.25 0 00.286-.76m11.928 9.869A9 9 0 008.965 3.525m11.928 9.868A9 9 0 118.965 3.525" />
-                </svg>
+            <li class="flow-root">
+                <app-carbon-metric color="bg-green-500" title="Protection de l'environnement"
+                    description="Bientôt disponible">
+                    <!-- Heroicon name: outline/truck --><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M20.893 13.393l-1.135-1.135a2.252 2.252 0 01-.421-.585l-1.08-2.16a.414.414 0 00-.663-.107.827.827 0 01-.812.21l-1.273-.363a.89.89 0 00-.738 1.595l.587.39c.59.395.674 1.23.172 1.732l-.2.2c-.212.212-.33.498-.33.796v.41c0 .409-.11.809-.32 1.158l-1.315 2.191a2.11 2.11 0 01-1.81 1.025 1.055 1.055 0 01-1.055-1.055v-1.172c0-.92-.56-1.747-1.414-2.089l-.655-.261a2.25 2.25 0 01-1.383-2.46l.007-.042a2.25 2.25 0 01.29-.787l.09-.15a2.25 2.25 0 012.37-1.048l1.178.236a1.125 1.125 0 001.302-.795l.208-.73a1.125 1.125 0 00-.578-1.315l-.665-.332-.091.091a2.25 2.25 0 01-1.591.659h-.18c-.249 0-.487.1-.662.274a.931.931 0 01-1.458-1.137l1.411-2.353a2.25 2.25 0 00.286-.76m11.928 9.869A9 9 0 008.965 3.525m11.928 9.868A9 9 0 118.965 3.525" />
+                    </svg>
 
-            </app-carbon-metric>
-        </li>
+                </app-carbon-metric>
+            </li>
 
-        <li class="flow-root">
-            <app-carbon-metric color="bg-indigo-500" title="Gestion des déchets" description="Bientôt disponible">
-                <!-- Heroicon name: outline/trash -->
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-6 text-white">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                </svg>
+            <li class="flow-root">
+                <app-carbon-metric color="bg-indigo-500" title="Gestion des déchets" description="Bientôt disponible">
+                    <!-- Heroicon name: outline/trash -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                    </svg>
 
-            </app-carbon-metric>
-        </li>
+                </app-carbon-metric>
+            </li>
 
-        <li class="flow-root">
-            <app-carbon-metric color="bg-[#FFD733]" title="Mix énergétique" description="Bientôt disponible">
-                <!-- Heroicon name: outline/arrows-pointing-in --><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-white">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M9 9V4.5M9 9H4.5M9 9L3.75 3.75M9 15v4.5M9 15H4.5M9 15l-5.25 5.25M15 9h4.5M15 9V4.5M15 9l5.25-5.25M15 15h4.5M15 15v4.5m0-4.5l5.25 5.25" />
-                </svg>
+            <li class="flow-root">
+                <app-carbon-metric color="bg-[#FFD733]" title="Mix énergétique" description="Bientôt disponible">
+                    <!-- Heroicon name: outline/arrows-pointing-in --><svg xmlns="http://www.w3.org/2000/svg"
+                        fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                        class="w-6 h-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 9V4.5M9 9H4.5M9 9L3.75 3.75M9 15v4.5M9 15H4.5M9 15l-5.25 5.25M15 9h4.5M15 9V4.5M15 9l5.25-5.25M15 15h4.5M15 15v4.5m0-4.5l5.25 5.25" />
+                    </svg>
 
-            </app-carbon-metric>
-        </li>
-    </ul>
-    <div class="mt-4 flex">
-        <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">
-            Ou importez manuellement toutes vos informations
-            <span aria-hidden="true"> &rarr;</span>
-        </a>
+                </app-carbon-metric>
+            </li>
+        </ul>
+        <div class="mt-4 flex">
+            <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">
+                Ou importez manuellement toutes vos informations
+                <span aria-hidden="true"> &rarr;</span>
+            </a>
+        </div>
     </div>
 </div>
 
