--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -1,32 +1,63 @@
-<div class="w-5/6 mx-auto">
+<div class="w-4/5 mx-auto">
+  <h1 class="text-4xl text-gray-900 font-bold mb-8">
+    Objectif 2050
+  </h1>
   <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
-    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-      <dt class="truncate text-sm font-medium text-gray-500">Émis</dt>
-      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
-        <span [countUp]="CO2" [duration]="duration"></span>
-        <span class="text-xl font-semibold text-gray-900">tCO₂e</span>
+
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6 col-span-2">
+      <div id="chart">
+        <apx-chart [series]="chartOptions.series!" [chart]="chartOptions.chart!" [yaxis]="chartOptions.yaxis!"
+          [xaxis]="chartOptions.xaxis!" [labels]="chartOptions.labels!" [stroke]="chartOptions.stroke!"
+          [plotOptions]="chartOptions.plotOptions!" [markers]="chartOptions.markers!" [fill]="chartOptions.fill!"
+          [tooltip]="chartOptions.tooltip!"></apx-chart>
+      </div>
+    </div>
+
+    <div class="flex flex-col justify-center overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dd class="mt-1 text-5xl font-semibold tracking-tight text-vert-500 text-center mb-8">
+        89€
+      </dd>
+      <dd class="mt-1 text-2xl font-semibold tracking-tight text-gray-500 text-center">
+        La tonne de CO₂ évitée
       </dd>
     </div>
 
-    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-      <dt class="truncate text-sm font-medium text-gray-500">Réduction des émissions</dt>
-      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
-        <span [countUp]="reducedCO2" [duration]="duration"></span>
-        <span class="text-xl font-semibold text-gray-900">tCO₂e</span>
-      </dd>
-    </div>
+  </dl>
+</div>
+
+<div class="w-4/5 mx-auto">
+  <h1 class="text-4xl text-gray-900 font-bold mt-12 mb-8">
+    Investissements verts 2022
+  </h1>
+  <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
 
     <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-      <dt class="truncate text-sm font-medium text-gray-500">Green loan</dt>
+      <dt class="truncate text-sm font-medium text-gray-500">Projets accompagnés</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
         <span [countUp]="countGreenloans" [duration]="duration"></span>
       </dd>
     </div>
+
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dt class="truncate text-sm font-medium text-gray-500">Émis</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
+        <span [countUp]="CO2" [duration]="duration"></span>
+        <span class="text-xl font-semibold text-gray-900">tCO₂</span>
+      </dd>
+    </div>
+
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
+      <dt class="truncate text-sm font-medium text-gray-500">Émissions évitées</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
+        <span [countUp]="reducedCO2" [duration]="duration"></span>
+        <span class="text-xl font-semibold text-gray-900">tCO₂</span>
+      </dd>
+    </div>
+
   </dl>
 </div>
 
-<!-- <button (click)="clearSelection()">Clear Selection</button> -->
-<div class="w-4/5 h-[68vh] mx-auto mt-12">
+<div class="w-4/5 h-[42vh] mx-auto mt-5">
   <ag-grid-angular style="width: 100%; height: 100%" class="ag-theme-material" [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef" [rowData]="rowData$ | async" [rowSelection]="'multiple'" [animateRows]="true"
     (gridReady)="onGridReady($event)" (cellClicked)="onCellClicked($event)"></ag-grid-angular>
