--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -29,6 +29,12 @@
   <h1 class="text-4xl text-gray-900 font-bold mt-12 mb-8">
     Investissements verts 2022
   </h1>
+
+  <div class="mb-3 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-5" dir="rtl">
+    <app-inline-search class="sm:col-span-1"></app-inline-search>
+    <app-sector-selector class="sm:col-span-1"></app-sector-selector>
+  </div>
+
   <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
 
     <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
