--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
                         <!-- Mobile menu button -->
                         <button type="button"
                             class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-                            aria-controls="mobile-menu" aria-expanded="false">
+                            aria-controls="mobile-menu" aria-expanded="false" (click)="navigateToBpi()">
                             <span class="sr-only">Open main menu</span>
 
                             <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -91,9 +91,20 @@
             <!-- Mobile menu, show/hide based on menu state. -->
             <div class="sm:hidden" id="mobile-menu">
                 <div class="border-t border-gray-200 pt-4 pb-3">
-                    <div class="flex items-center px-4">
+                    <div class="flex items-center px-4 justify-between">
                         <div class="flex-shrink-0">
                             <img class="h-10 w-10 rounded-full" [src]="user.picture[persona]" alt="">
+                        </div>
+
+                        <div class="ml-3" *ngIf="persona === Personas.BORROWER">
+                            <p class="text-sm font-medium text-gray-700 group-hover:text-gray-900">
+                                {{user.name[persona]}}
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w- h-6 inline-block">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                </svg>
+                            </p>
                         </div>
                     </div>
                 </div>
