--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,7 @@
-<div class="w-7/12 mx-auto">
-    <h1 class="text-4xl text-gray-900 font-bold mb-12">
+<div class="w-11/12 sm:w-7/12 mx-auto">
+    <h1 class="text-2xl sm:text-4xl text-gray-900 font-bold mb-12">
         Prêt économie d'énergie (PEE)
     </h1>
-
 
     <!-- <div class="mx-auto max-w-4xl mt-6 mb-12">
         <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
