--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -42,8 +42,14 @@
             <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
                 <dt class="truncate text-lg font-medium text-gray-500">Objectif à 12 mois</dt>
                 <dd class="mt-1 text-4xl font-semibold tracking-tight text-gray-900">
-                    <span [countUp]="currentLoan.goal" [duration]="duration"></span>
-                    <span class="text-xl font-semibold text-gray-900"> % de consommation d'énergie</span>
+                    <span [countUp]="currentLoan.wattGoal" [duration]="duration"></span>
+                    <span class="text-xl font-semibold text-gray-900"> MWh
+
+                        <span class="text-gray-500">
+                            (<span [countUp]="currentLoan.goal" [duration]="duration"></span>
+                            <span class="text-xl font-semibold "> %</span>)
+                        </span>
+                    </span>
                 </dd>
             </div>
         </dl>
