--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -14,8 +14,8 @@
     </div>
 
     <div class="flex flex-col justify-center overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-      <dd class="mt-1 text-5xl font-semibold tracking-tight text-vert-500 text-center mb-8">
-        89€
+      <dd class="mt-1 text-6xl font-semibold tracking-tight text-vert-500 text-center mb-8">
+        <span [countUp]="priceTCO2" [duration]="duration"></span>€
       </dd>
       <dd class="mt-1 text-2xl font-semibold tracking-tight text-gray-500 text-center">
         La tonne de CO₂ évitée
@@ -45,10 +45,10 @@
     </div>
 
     <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-      <dt class="truncate text-sm font-medium text-gray-500">Émis</dt>
+      <dt class="truncate text-sm font-medium text-gray-500">Réduction de la consommation</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
-        <span [countUp]="CO2" [duration]="duration"></span>
-        <span class="text-xl font-semibold text-gray-900">tCO₂</span>
+        <span [countUp]="producedCO2" [duration]="duration"></span>
+        <span class="text-xl font-semibold text-gray-900 ml-2">GWh/an</span>
       </dd>
     </div>
 
@@ -56,7 +56,7 @@
       <dt class="truncate text-sm font-medium text-gray-500">Émissions évitées</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
         <span [countUp]="reducedCO2" [duration]="duration"></span>
-        <span class="text-xl font-semibold text-gray-900">tCO₂</span>
+        <span class="text-xl font-semibold text-gray-900 ml-2">tCO₂</span>
       </dd>
     </div>
 
