--- a/src/app/features/home-bpi/home-bpi.component.html
+++ b/src/app/features/home-bpi/home-bpi.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="w-4/5 mx-auto">
-  <h1 class="text-4xl text-gray-900 font-bold mt-12 mb-8">
+  <h1 class="text-4xl text-gray-900 font-bold mt-12">
     Investissements verts 2022
   </h1>
 
